Kapitola 2 s důkazy vlastních tvrzení

--- a/cs/literatura.bib
+++ b/cs/literatura.bib
@@ -27,7 +27,7 @@ doi="10.1007/978-0-8176-4719-3_2",
 url="https://doi.org/10.1007/978-0-8176-4719-3_2"
 }
 
-@inproceedings{Eisermann,
+@inproceedings{eisermann1999number,
   title={The number of knot group representations is not a Vassiliev invariant},
   author={Michael Eisermann},
   year={1999},
