--- a/cs/prace.tex
+++ b/cs/prace.tex
@@ -136,9 +136,7 @@ Abstract.
 %%% Jednotlivé kapitoly práce jsou pro přehlednost uloženy v samostatných souborech
 \include{uvod}
 
-\include{zakladni-pojmy}
-
-\include{vassiliev}
+\include{content}
 
 \include{zaver}
 
