--- a/cs/literatura.bib
+++ b/cs/literatura.bib
@@ -95,3 +95,12 @@ url="https://doi.org/10.1007/978-0-8176-4719-3_2"
   pages={37-65},
   url={https://api.semanticscholar.org/CorpusID:120011159}
 }
+
+@misc{darné2022nilpotent,
+      title={Nilpotent quandles}, 
+      author={Jacques Darné},
+      year={2022},
+      eprint={2205.02480},
+      archivePrefix={arXiv},
+      primaryClass={math.GT}
+}
