--- a/cs/makra.tex
+++ b/cs/makra.tex
@@ -119,6 +119,18 @@
 %%% Prostor reálných, resp. přirozených čísel
 \newcommand{\R}{\mathbb{R}}
 \newcommand{\N}{\mathbb{N}}
+\newcommand{\Z}{\mathbb{Z}}
+\newcommand{\Q}{\mathbb{Q}}
+\newcommand{\C}{\mathbb{C}}
+\newcommand{\F}{\mathbb{F}}
+\newcommand{\K}{\mathcal{K}}
+\newcommand{\Conj}[1]{\text{Conj}(#1)}
+\newcommand{\Aut}[1]{\text{Aut}(#1)}
+\newcommand{\Inn}[1]{\text{Inn}(#1)}
+\newcommand{\Ima}{\text{Im}\,}
+\newcommand{\Ker}{\text{Ker}\,}
+\newcommand{\Col}[2]{\text{Col}_{#1}(#2)}
+\newcommand{\Hom}[2]{\text{Hom}(#1,#2)}
 
 %%% Užitečné operátory pro statistiku a pravděpodobnost
 \DeclareMathOperator{\pr}{\textsf{P}}
