--- a/cs/prace.tex
+++ b/cs/prace.tex
@@ -59,6 +59,9 @@
 \usepackage{paralist}       % lepší enumerate a itemize
 \usepackage{xcolor}         % barevná sazba
 \usepackage{lipsum}
+\usepackage{longtable}
+\usepackage{multirow}
+
 
 %%% Údaje o práci
 
