--- a/cs/literatura.bib
+++ b/cs/literatura.bib
@@ -104,3 +104,12 @@ url="https://doi.org/10.1007/978-0-8176-4719-3_2"
       archivePrefix={arXiv},
       primaryClass={math.GT}
 }
+
+@misc{bonatto2020quandles,
+      title={Quandles with orbit series conditions}, 
+      author={Marco Bonatto and Alissa S. Crans and Timur Nasybullov and Glen T. Whitney},
+      year={2020},
+      eprint={2004.10227},
+      archivePrefix={arXiv},
+      primaryClass={math.GR}
+}
