--- a/cs/makra.tex
+++ b/cs/makra.tex
@@ -131,6 +131,7 @@
 \newcommand{\Ker}{\text{Ker}\,}
 \newcommand{\Col}[2]{\text{Col}_{#1}(#2)}
 \newcommand{\Hom}[2]{\text{Hom}(#1,#2)}
+\newcommand{\Orb}[1]{\text{Orb}(#1)}
 
 %%% Užitečné operátory pro statistiku a pravděpodobnost
 \DeclareMathOperator{\pr}{\textsf{P}}
