--- a/cs/prace.tex
+++ b/cs/prace.tex
@@ -61,6 +61,7 @@
 \usepackage{lipsum}
 \usepackage{longtable}
 \usepackage{multirow}
+\usepackage{tikz}
 
 
 %%% Údaje o práci
@@ -139,7 +140,11 @@ Abstract.
 %%% Jednotlivé kapitoly práce jsou pro přehlednost uloženy v samostatných souborech
 \include{uvod}
 
-\include{content}
+% \include{content}
+\include{zakladni-pojmy}
+\include{quandly}
+\include{trivialni-barveni}
+\include{vassiliev}
 
 \include{zaver}
 
