Část kapitol 2 a 4, kapitola 3.

--- a/cs/literatura.bib
+++ b/cs/literatura.bib
@@ -113,3 +113,35 @@ url="https://doi.org/10.1007/978-0-8176-4719-3_2"
       archivePrefix={arXiv},
       primaryClass={math.GR}
 }
+
+@misc{bonatto2021universal,
+      title={A Universal algebraic approach to rack coverings}, 
+      author={Marco Bonatto and David Stanovský},
+      year={2021},
+      eprint={1910.09317},
+      archivePrefix={arXiv},
+      primaryClass={math.GR}
+}
+
+@article{Jedlicka2020,
+   title={Distributive biracks and solutions of the Yang–Baxter equation},
+   volume={30},
+   ISSN={1793-6500},
+   url={http://dx.doi.org/10.1142/S0218196720500150},
+   DOI={10.1142/s0218196720500150},
+   number={03},
+   journal={International Journal of Algebra and Computation},
+   publisher={World Scientific Pub Co Pte Lt},
+   author={Jedlička, Přemysl and Pilitowska, Agata and Zamojska-Dzienio, Anna},
+   year={2020},
+   month=jan, pages={667–683}
+}
+
+@misc{hulpke2015connected,
+      title={Connected quandles and transitive groups}, 
+      author={Alexander Hulpke and David Stanovský and Petr Vojtěchovský},
+      year={2015},
+      eprint={1409.2249},
+      archivePrefix={arXiv},
+      primaryClass={math.GR}
+}
