--- a/cs/makra.tex
+++ b/cs/makra.tex
@@ -18,7 +18,7 @@
    \par\nobreak
    \vskip 20\p@
 }}
-\def\fps@figure{h}
+\def\fps@figure{h!}
 \makeatother
 
 % Citáty
@@ -131,7 +131,7 @@
 \newcommand{\Ker}{\text{Ker}\,}
 \newcommand{\Col}[2]{\text{Col}_{#1}(#2)}
 \newcommand{\Hom}[2]{\text{Hom}(#1,#2)}
-\newcommand{\Orb}[1]{\text{Orb}(#1)}
+\newcommand{\Orb}[2][]{\text{Orb}^{#1}(#2)}
 
 %%% Užitečné operátory pro statistiku a pravděpodobnost
 \DeclareMathOperator{\pr}{\textsf{P}}
