Kapitola 4, odstranění závěru

--- a/cs/literatura.bib
+++ b/cs/literatura.bib
@@ -134,7 +134,8 @@ url="https://doi.org/10.1007/978-0-8176-4719-3_2"
    publisher={World Scientific Pub Co Pte Lt},
    author={Jedlička, Přemysl and Pilitowska, Agata and Zamojska-Dzienio, Anna},
    year={2020},
-   month=jan, pages={667–683}
+   month=jan,
+   pages={667–683}
 }
 
 @misc{hulpke2015connected,
@@ -144,4 +145,46 @@ url="https://doi.org/10.1007/978-0-8176-4719-3_2"
       eprint={1409.2249},
       archivePrefix={arXiv},
       primaryClass={math.GR}
+}
+
+@incollection {Trapp1994,
+    AUTHOR = {Trapp, Rolland},
+     TITLE = {Twist sequences and {V}assiliev invariants},
+      NOTE = {Random knotting and linking (Vancouver, BC, 1993)},
+   JOURNAL = {J. Knot Theory Ramifications},
+  FJOURNAL = {Journal of Knot Theory and its Ramifications},
+    VOLUME = {3},
+      YEAR = {1994},
+    NUMBER = {3},
+     PAGES = {391--405},
+      ISSN = {0218-2165,1793-6527},
+   MRCLASS = {57M25},
+  MRNUMBER = {1291867},
+MRREVIEWER = {Simon\ Willerton},
+       DOI = {10.1142/S0218216594000289},
+       URL = {https://doi.org/10.1142/S0218216594000289}
+}
+
+@article {Dean1994,
+    AUTHOR = {Dean, John},
+     TITLE = {Many classical knot invariants are not {V}assiliev invariants},
+   JOURNAL = {J. Knot Theory Ramifications},
+  FJOURNAL = {Journal of Knot Theory and its Ramifications},
+    VOLUME = {3},
+      YEAR = {1994},
+    NUMBER = {1},
+     PAGES = {7--10},
+      ISSN = {0218-2165,1793-6527},
+   MRCLASS = {57M25},
+  MRNUMBER = {1265449},
+MRREVIEWER = {Joanna\ Kania-Bartoszynska},
+       DOI = {10.1142/S0218216594000034},
+       URL = {https://doi.org/10.1142/S0218216594000034}
+}
+
+@book{Jezek2008,
+      title={Universal Algebra},
+      author={Jiří Ježek},
+      year={2008},
+      url={https://ka.karlin.mff.cuni.cz/jezek/ua.pdf}
 }
