--- a/cs/makra.tex
+++ b/cs/makra.tex
@@ -129,7 +129,7 @@
 \newcommand{\Inn}[1]{\text{Inn}(#1)}
 \newcommand{\Ima}{\text{Im}\,}
 \newcommand{\Ker}{\text{Ker}\,}
-\newcommand{\Col}[2]{\text{Col}_{#1}(#2)}
+\newcommand{\Col}[3][]{\text{Col}^{#1}_{#2}(#3)}
 \newcommand{\Hom}[2]{\text{Hom}(#1,#2)}
 \newcommand{\Orb}[2][]{\text{Orb}^{#1}(#2)}
 
