--- a/cs/prace.tex
+++ b/cs/prace.tex
@@ -146,7 +146,7 @@ Abstract.
 \include{trivialni-barveni}
 \include{vassiliev}
 
-\include{zaver}
+% \include{zaver}
 
 %%% Seznam použité literatury
 \include{literatura}
