--- a/cs/prace.tex
+++ b/cs/prace.tex
@@ -101,23 +101,32 @@
 % Nepovinné poděkování (vedoucímu práce, konzultantovi, tomu, kdo
 % zapůjčil software, literaturu apod.)
 \def\Podekovani{%
-Poděkování.
+Děkuji doc. RNDr. Davidu Stanovskému, Ph.D. za pomoc při řešení obtížných pasáží a cenné rady při psaní této práce. 
 }
 
 % Abstrakt (doporučený rozsah cca 80-200 slov; nejedná se o zadání práce)
 \def\Abstrakt{%
-Abstrakt.
+Uzly můžeme barvit různými konečnými quandly a zjišťovat, zda mají netriviální obarvení. Pokud ano, pak dokážeme
+říct, že daný uzel není unknot. V práci se však zaměříme na takové quanldy, které vždy dávají triviální barvení.
+Proč by nás tedy měly zajímat? Mají totiž zajímavé algebraické vlastnosti. Dokážeme, že jsou to právě reduktivní
+quandly a také, že barvení uzlů pomocí reduktivních quandlů je Vassilievův invariant. A žádné jiné barvení není.
+Stejně tak budeme charakterizovat quandly, které dávají triviální barvení linků.
 }
+
 \def\AbstraktEN{%
-Abstract.
+We can color knots with different finite quandles and check if they have non-trivial coloring. If so, we can say
+that the knot is not an unknot. However, we will focus on quandles that always give trivial coloring. Why should
+we care about them? They have interesting algebraic properties. We will show that these are precisely the reductive
+quandles and that coloring knots using reductive quandles is a Vassiliev invariant. And no other coloring is.
+We will also characterize quandles that give trivial coloring of links.
 }
 
 % 3 až 5 klíčových slov (doporučeno), každé uzavřeno ve složených závorkách
 \def\KlicovaSlova{%
-{klíčová} {slova}
+{Reduktivní quandly} {Barvení uzlů} {Vassilievovy invariant}
 }
 \def\KlicovaSlovaEN{%
-{key} {words}
+{Reductive quandles} {Knot coloring} {Vassiliev invariant}
 }
 
 %% Balíček hyperref, kterým jdou vyrábět klikací odkazy v PDF,
