--- a/cs/prace.tex
+++ b/cs/prace.tex
@@ -123,10 +123,10 @@ We will also characterize quandles that give trivial coloring of links.
 
 % 3 až 5 klíčových slov (doporučeno), každé uzavřeno ve složených závorkách
 \def\KlicovaSlova{%
-{Reduktivní quandly} {Barvení uzlů} {Vassilievovy invariant}
+{Reduktivní quandly} {Barvení uzlů} {Vassilievovy invarianty}
 }
 \def\KlicovaSlovaEN{%
-{Reductive quandles} {Knot coloring} {Vassiliev invariant}
+{Reductive quandles} {Knot coloring} {Vassiliev invariants}
 }
 
 %% Balíček hyperref, kterým jdou vyrábět klikací odkazy v PDF,
