Část kapitoly o reduktivitě

--- a/cs/makra.tex
+++ b/cs/makra.tex
@@ -131,7 +131,8 @@
 \newcommand{\Ker}{\text{Ker}\,}
 \newcommand{\Col}[3][]{\text{Col}^{#1}_{#2}(#3)}
 \newcommand{\Hom}[2]{\text{Hom}(#1,#2)}
-\newcommand{\Orb}[2][]{\text{Orb}^{#1}(#2)}
+\newcommand{\Orb}[2][]{\mathcal{O}^{#1}(#2)}
+\newcommand{\Con}[1]{\text{Con}(#1)}
 
 %%% Užitečné operátory pro statistiku a pravděpodobnost
 \DeclareMathOperator{\pr}{\textsf{P}}
