--- a/cs/makra.tex
+++ b/cs/makra.tex
@@ -51,15 +51,34 @@
 \newtheorem{tvrzeni}[veta]{Tvrzení}
 \newtheorem{fakt}[veta]{Fakt}
 \newtheorem{domnenka}[veta]{Domněnka}
+\newtheorem{dusledek}[veta]{Důsledek}
+
 
 \theoremstyle{definition}
 \newtheorem{definice}{Definice}
 
 \theoremstyle{remark}
-\newtheorem*{dusledek}{Důsledek}
 \newtheorem*{pozn}{Poznámka}
 \newtheorem*{priklad}{Příklad}
 \newtheorem*{pozorovani}{Pozorování}
+
+\newtheoremstyle{noparentheses}
+  {\topsep}   % ABOVESPACE
+  {\topsep}   % BELOWSPACE
+  {\itshape}  % BODYFONT
+  {0pt}       % INDENT (empty value is the same as 0pt)
+  {\bfseries} % HEADFONT
+  {.}         % HEADPUNCT
+  {5pt plus 1pt minus 1pt} % HEADSPACE
+  {\thmname{#1} \thmnumber{#2} \textnormal{\thmnote{#3}}}          % CUSTOM-HEAD-SPEC
+\theoremstyle{noparentheses}
+\newtheorem{vetac}[veta]{Věta}
+\newtheorem{theoremc}[veta]{Věta}
+\newtheorem{lemmac}[veta]{Lemma}
+\newtheorem{tvrzenic}[veta]{Tvrzení}
+\newtheorem{faktc}[veta]{Fakt}
+\newtheorem{domnenkac}[veta]{Domněnka}
+\newtheorem{dusledekc}[veta]{Důsledek}
 
 %%% Prostředí pro důkazy
 
