--- a/cs/prace.tex
+++ b/cs/prace.tex
@@ -106,19 +106,21 @@ Děkuji doc. RNDr. Davidu Stanovskému, Ph.D. za pomoc při řešení obtížný
 
 % Abstrakt (doporučený rozsah cca 80-200 slov; nejedná se o zadání práce)
 \def\Abstrakt{%
-Uzly můžeme barvit různými konečnými quandly a zjišťovat, zda mají netriviální obarvení. Pokud ano, pak dokážeme
-říct, že daný uzel není unknot. V práci se však zaměříme na takové quanldy, které vždy dávají triviální barvení.
-Proč by nás tedy měly zajímat? Mají totiž zajímavé algebraické vlastnosti. Dokážeme, že jsou to právě reduktivní
-quandly a také, že barvení uzlů pomocí reduktivních quandlů je Vassilievův invariant. A žádné jiné barvení není.
-Stejně tak budeme charakterizovat quandly, které dávají triviální barvení linků.
+Uzly můžeme barvit různými konečnými quandly a zjišťovat, zda mají netriviální obarvení. Pokud ano, pak
+dokážeme říct, že daný uzel je rozvázatelný. V práci se však zaměříme na takové quandly, které vždy dávají
+triviální barvení. Ukáže se totiž, že mají totiž zajímavé algebraické vlastnosti. V této práci dokážeme,
+že quandle dává pro každý uzel triviální barvení, právě tehdy když je quandle reduktivní, a to je právě tehdy,
+když je barvicí invariant Vassilievův. Podobnou charakterizaci provedeme linky. Tedy quandle dává triviální
+barvení pro každý link, právě tehdy když se jedná o triviální quandle.
 }
 
 \def\AbstraktEN{%
-We can color knots with different finite quandles and check if they have non-trivial coloring. If so, we can say
-that the knot is not an unknot. However, we will focus on quandles that always give trivial coloring. Why should
-we care about them? They have interesting algebraic properties. We will show that these are precisely the reductive
-quandles and that coloring knots using reductive quandles is a Vassiliev invariant. And no other coloring is.
-We will also characterize quandles that give trivial coloring of links.
+We can color knots by various finite quandles and check if they have non-trivial coloring. If so, we can
+say that the knot is an unknot. However, we will focus on quandles that always give trivial coloring.
+It will turn out that they have interesting algebraic properties. In this work, we will show that a quandle
+gives a trivial coloring for each knot if and only if the quandle is reductive, which is exactly when
+the coloring invariant is Vassiliev's. We will make a similar characterization for links. That is,
+a quandle gives a trivial coloring for each link if and only if it is a trivial quandle.
 }
 
 % 3 až 5 klíčových slov (doporučeno), každé uzavřeno ve složených závorkách
