--- a/cs/svoc.tex
+++ b/cs/svoc.tex
@@ -99,12 +99,6 @@
 \def\StudijniProgram{Matematika pro informační technologie}
 \def\StudijniObor{Matematika pro informační technologie}
 
-% Nepovinné poděkování (vedoucímu práce, konzultantovi, tomu, kdo
-% zapůjčil software, literaturu apod.)
-\def\Podekovani{%
-Děkuji doc. RNDr. Davidu Stanovskému, Ph.D. za pomoc při řešení obtížných pasáží a cenné rady při psaní této práce. 
-}
-
 % Abstrakt (doporučený rozsah cca 80-200 slov; nejedná se o zadání práce)
 \def\Abstrakt{%
 Uzly můžeme barvit různými konečnými quandly a zjišťovat, zda mají netriviální obarvení. Pokud ano, pak
@@ -143,7 +137,7 @@ a quandle gives a trivial coloring for each link if and only if it is a trivial 
 
 %% Titulní strana a různé povinné informační strany
 \begin{document}
-\include{titulka}
+\include{titulka-svoc}
 
 %%% Strana s automaticky generovaným obsahem bakalářské práce
 
