--- a/cs/literatura.bib
+++ b/cs/literatura.bib
@@ -198,3 +198,75 @@
       year={2008},
       url={https://ka.karlin.mff.cuni.cz/jezek/ua.pdf}
 }
+
+@article{Haken1962,
+number = {1},
+pages = {89-120},
+title = {Über das Homöomorphieproblem der 3-Mannigfaltigkeiten. I},
+volume = {80},
+year = {1962},
+language = {ger},
+author = {Haken, Wolfgang},
+copyright = {Copyright 2007 Elsevier B.V., All rights reserved.},
+issn = {0025-5874},
+journal = {Mathematische Zeitschrift},
+}
+
+@article{Hass1998,
+title = {The Computational Complexity of Knot and Link Problems},
+year = {1998},
+language = {eng},
+abstract = {J. A. C. M. 46 (1999) 185--211. We consider the problem of deciding whether a polygonal knot in 3-dimensional
+Euclidean space is unknotted, capable of being continuously deformed without
+self-intersection so that it lies in a plane. We show that this problem, {\sc
+unknotting problem} is in {\bf NP}. We also consider the problem, {\sc
+unknotting problem} of determining whether two or more such polygons can be
+split, or continuously deformed without self-intersection so that they occupy
+both sides of a plane without intersecting it. We show that it also is in NP.
+Finally, we show that the problem of determining the genus of a polygonal knot
+(a generalization of the problem of determining whether it is unknotted) is in
+{\bf PSPACE}. We also give exponential worst-case running time bounds for
+deterministic algorithms to solve each of these problems. These algorithms are
+based on the use of normal surfaces and decision procedures due to W. Haken,
+with recent extensions by W. Jaco and J. L. Tollefson.},
+author = {Hass, Joel and Lagarias, Jeffrey C and Pippenger, Nicholas},
+}
+
+@article{Kuperberg2014,
+pages = {493-506},
+publisher = {Elsevier Inc},
+title = {Knottedness is in NP, modulo GRH},
+volume = {256},
+year = {2014},
+language = {eng},
+abstract = {Given a tame knot K presented in the form of a knot diagram, we show that the problem of determining whether K is knotted is in the complexity class NP, assuming the generalized Riemann hypothesis (GRH). In other words, there exists a polynomial-length certificate that can be verified in polynomial time to prove that K is non-trivial. GRH is not needed to believe the certificate, but only to find a short certificate. This result complements the result of Hass, Lagarias, and Pippenger that unknottedness is in NP. Our proof is a corollary of major results of others in algebraic geometry and geometric topology.},
+author = {Kuperberg, Greg},
+copyright = {2014},
+issn = {0001-8708},
+journal = {Advances in mathematics (New York. 1965)},
+}
+
+@book{Fox1963,
+  title={Introduction to Knot Theory},
+  author={Crowell, R.H. and Fox, R.H.},
+  isbn={9780598273888},
+  lccn={62008920},
+  series={Introductions to higher mathematics},
+  url={https://books.google.cz/books?id=UlHvAAAAMAAJ},
+  year={1963},
+  publisher={Ginn}
+}
+
+@article{Alexander1923,
+ ISSN = {00278424},
+ URL = {http://www.jstor.org/stable/84367},
+ author = {J. W. Alexander},
+ journal = {Proceedings of the National Academy of Sciences of the United States of America},
+ number = {3},
+ pages = {93--95},
+ publisher = {National Academy of Sciences},
+ title = {A Lemma on Systems of Knotted Curves},
+ urldate = {2024-05-08},
+ volume = {9},
+ year = {1923}
+}
