--- a/cs/prace.tex
+++ b/cs/prace.tex
@@ -102,13 +102,14 @@
 % Nepovinné poděkování (vedoucímu práce, konzultantovi, tomu, kdo
 % zapůjčil software, literaturu apod.)
 \def\Podekovani{%
-Děkuji doc. RNDr. Davidu Stanovskému, Ph.D. za pomoc při řešení obtížných pasáží a cenné rady při psaní této práce. 
+Děkuji doc. RNDr. Davidu Stanovskému, Ph.D. za pomoc při řešení obtížných pasáží a cenné rady při psaní této práce.
+Dále bych rád poděkoval RNDr. Zuzaně Patákové, Ph.D. za revizi a kontrolu textu práce.
 }
 
 % Abstrakt (doporučený rozsah cca 80-200 slov; nejedná se o zadání práce)
 \def\Abstrakt{%
 Uzly můžeme barvit různými konečnými quandly a zjišťovat, zda mají netriviální obarvení. Pokud ano, pak
-dokážeme říct, že daný uzel je rozvázatelný. V práci se však zaměříme na takové quandly, které vždy dávají
+dokážeme říct, že daný uzel není rozvázatelný. V práci se však zaměříme na takové quandly, které vždy dávají
 triviální barvení. Ukáže se totiž, že mají totiž zajímavé algebraické vlastnosti. V této práci dokážeme,
 že quandle dává pro každý uzel triviální barvení, právě tehdy když je quandle reduktivní, a to je právě tehdy,
 když je barvicí invariant Vassilievův. Podobnou charakterizaci provedeme pro linky. Tedy quandle dává triviální
@@ -117,7 +118,7 @@ barvení pro každý link, právě tehdy když se jedná o triviální quandle.
 
 \def\AbstraktEN{%
 We can color knots by various finite quandles and check if they have non-trivial coloring. If so, we can
-say that the knot is an unknot. However, we will focus on quandles that always give trivial coloring.
+say that the knot is not an unknot. However, we will focus on quandles that always give trivial coloring.
 It will turn out that they have interesting algebraic properties. In this work, we will show that a quandle
 gives a trivial coloring for each knot if and only if the quandle is reductive, which is exactly when
 the coloring invariant is Vassiliev's. We will make a similar characterization for links. That is,
@@ -126,10 +127,10 @@ a quandle gives a trivial coloring for each link if and only if it is a trivial 
 
 % 3 až 5 klíčových slov (doporučeno), každé uzavřeno ve složených závorkách
 \def\KlicovaSlova{%
-{Reduktivní quandly} {Barvení uzlů} {Vassilievovy invarianty}
+{Reduktivní quandly}, {Barvení uzlů}, {Vassilievovy invarianty}
 }
 \def\KlicovaSlovaEN{%
-{Reductive quandles} {Knot coloring} {Vassiliev invariants}
+{Reductive quandles}, {Knot coloring}, {Vassiliev invariants}
 }
 
 %% Balíček hyperref, kterým jdou vyrábět klikací odkazy v PDF,
